src/generated/SysvisParser.ts
// Generated from Sysvis.g4 by ANTLR 4.6-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { SysvisListener } from "./SysvisListener";
import { SysvisVisitor } from "./SysvisVisitor";


export class SysvisParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly NODE = 10;
	public static readonly EDGE = 11;
	public static readonly CLUSTER = 12;
	public static readonly ID = 13;
	public static readonly SPACES = 14;
	public static readonly RULE_story = 0;
	public static readonly RULE_frame = 1;
	public static readonly RULE_statements = 2;
	public static readonly RULE_stmt = 3;
	public static readonly RULE_attr = 4;
	public static readonly RULE_assignments = 5;
	public static readonly RULE_assign = 6;
	public static readonly RULE_edge = 7;
	public static readonly RULE_node = 8;
	public static readonly RULE_cluster = 9;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"story", "frame", "statements", "stmt", "attr", "assignments", "assign", 
		"edge", "node", "cluster",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'---'", "';'", "'['", "','", "']'", "'='", "'->'", "'{'", 
		"'}'", "'node'", "'edge'", "'cluster'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, "NODE", "EDGE", "CLUSTER", "ID", "SPACES",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(SysvisParser._LITERAL_NAMES, SysvisParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return SysvisParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Sysvis.g4"; }

	// @Override
	public get ruleNames(): string[] { return SysvisParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return SysvisParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(SysvisParser._ATN, this);
	}
	// @RuleVersion(0)
	public story(): StoryContext {
		let _localctx: StoryContext = new StoryContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, SysvisParser.RULE_story);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 20;
			this.frame();
			this.state = 25;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === SysvisParser.T__0) {
				{
				{
				this.state = 21;
				this.match(SysvisParser.T__0);
				this.state = 22;
				this.frame();
				}
				}
				this.state = 27;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 29;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === SysvisParser.T__1) {
				{
				this.state = 28;
				this.match(SysvisParser.T__1);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public frame(): FrameContext {
		let _localctx: FrameContext = new FrameContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, SysvisParser.RULE_frame);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 31;
			this.statements();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statements(): StatementsContext {
		let _localctx: StatementsContext = new StatementsContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, SysvisParser.RULE_statements);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 33;
			this.stmt();
			this.state = 38;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 2, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 34;
					this.match(SysvisParser.T__1);
					this.state = 35;
					this.stmt();
					}
					}
				}
				this.state = 40;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 2, this._ctx);
			}
			this.state = 42;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 3, this._ctx) ) {
			case 1:
				{
				this.state = 41;
				this.match(SysvisParser.T__1);
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public stmt(): StmtContext {
		let _localctx: StmtContext = new StmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, SysvisParser.RULE_stmt);
		try {
			this.state = 49;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 4, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 44;
				this.node();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 45;
				this.edge();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 46;
				this.attr();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 47;
				this.assign();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 48;
				this.cluster();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public attr(): AttrContext {
		let _localctx: AttrContext = new AttrContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, SysvisParser.RULE_attr);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 51;
			_la = this._input.LA(1);
			if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SysvisParser.NODE) | (1 << SysvisParser.EDGE) | (1 << SysvisParser.CLUSTER))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 52;
			this.assignments();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public assignments(): AssignmentsContext {
		let _localctx: AssignmentsContext = new AssignmentsContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, SysvisParser.RULE_assignments);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 54;
			this.match(SysvisParser.T__2);
			this.state = 55;
			this.assign();
			this.state = 60;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === SysvisParser.T__3) {
				{
				{
				this.state = 56;
				this.match(SysvisParser.T__3);
				this.state = 57;
				this.assign();
				}
				}
				this.state = 62;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 63;
			this.match(SysvisParser.T__4);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public assign(): AssignContext {
		let _localctx: AssignContext = new AssignContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, SysvisParser.RULE_assign);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 65;
			this.match(SysvisParser.ID);
			this.state = 66;
			this.match(SysvisParser.T__5);
			this.state = 67;
			this.match(SysvisParser.ID);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public edge(): EdgeContext {
		let _localctx: EdgeContext = new EdgeContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, SysvisParser.RULE_edge);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 69;
			this.match(SysvisParser.ID);
			this.state = 70;
			this.match(SysvisParser.T__6);
			this.state = 71;
			this.match(SysvisParser.ID);
			this.state = 73;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === SysvisParser.T__2) {
				{
				this.state = 72;
				this.assignments();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public node(): NodeContext {
		let _localctx: NodeContext = new NodeContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, SysvisParser.RULE_node);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 75;
			this.match(SysvisParser.ID);
			this.state = 77;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === SysvisParser.T__2) {
				{
				this.state = 76;
				this.assignments();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public cluster(): ClusterContext {
		let _localctx: ClusterContext = new ClusterContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, SysvisParser.RULE_cluster);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 79;
			this.match(SysvisParser.CLUSTER);
			this.state = 80;
			this.match(SysvisParser.ID);
			this.state = 81;
			this.match(SysvisParser.T__7);
			this.state = 82;
			this.statements();
			this.state = 83;
			this.match(SysvisParser.T__8);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!SysvisParser.__ATN) {
			SysvisParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(SysvisParser._serializedATN));
		}

		return SysvisParser.__ATN;
	}

}

export class StoryContext extends ParserRuleContext {
	public frame(): FrameContext[];
	public frame(i: number): FrameContext;
	public frame(i?: number): FrameContext | FrameContext[] {
		if (i === undefined) {
			return this.getRuleContexts(FrameContext);
		} else {
			return this.getRuleContext(i, FrameContext);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SysvisParser.RULE_story; }
	// @Override
	public enterRule(listener: SysvisListener): void {
		if (listener.enterStory) {
			listener.enterStory(this);
		}
	}
	// @Override
	public exitRule(listener: SysvisListener): void {
		if (listener.exitStory) {
			listener.exitStory(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SysvisVisitor<Result>): Result {
		if (visitor.visitStory) {
			return visitor.visitStory(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class FrameContext extends ParserRuleContext {
	public statements(): StatementsContext {
		return this.getRuleContext(0, StatementsContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SysvisParser.RULE_frame; }
	// @Override
	public enterRule(listener: SysvisListener): void {
		if (listener.enterFrame) {
			listener.enterFrame(this);
		}
	}
	// @Override
	public exitRule(listener: SysvisListener): void {
		if (listener.exitFrame) {
			listener.exitFrame(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SysvisVisitor<Result>): Result {
		if (visitor.visitFrame) {
			return visitor.visitFrame(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class StatementsContext extends ParserRuleContext {
	public stmt(): StmtContext[];
	public stmt(i: number): StmtContext;
	public stmt(i?: number): StmtContext | StmtContext[] {
		if (i === undefined) {
			return this.getRuleContexts(StmtContext);
		} else {
			return this.getRuleContext(i, StmtContext);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SysvisParser.RULE_statements; }
	// @Override
	public enterRule(listener: SysvisListener): void {
		if (listener.enterStatements) {
			listener.enterStatements(this);
		}
	}
	// @Override
	public exitRule(listener: SysvisListener): void {
		if (listener.exitStatements) {
			listener.exitStatements(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SysvisVisitor<Result>): Result {
		if (visitor.visitStatements) {
			return visitor.visitStatements(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class StmtContext extends ParserRuleContext {
	public node(): NodeContext | undefined {
		return this.tryGetRuleContext(0, NodeContext);
	}
	public edge(): EdgeContext | undefined {
		return this.tryGetRuleContext(0, EdgeContext);
	}
	public attr(): AttrContext | undefined {
		return this.tryGetRuleContext(0, AttrContext);
	}
	public assign(): AssignContext | undefined {
		return this.tryGetRuleContext(0, AssignContext);
	}
	public cluster(): ClusterContext | undefined {
		return this.tryGetRuleContext(0, ClusterContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SysvisParser.RULE_stmt; }
	// @Override
	public enterRule(listener: SysvisListener): void {
		if (listener.enterStmt) {
			listener.enterStmt(this);
		}
	}
	// @Override
	public exitRule(listener: SysvisListener): void {
		if (listener.exitStmt) {
			listener.exitStmt(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SysvisVisitor<Result>): Result {
		if (visitor.visitStmt) {
			return visitor.visitStmt(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class AttrContext extends ParserRuleContext {
	public assignments(): AssignmentsContext {
		return this.getRuleContext(0, AssignmentsContext);
	}
	public CLUSTER(): TerminalNode | undefined { return this.tryGetToken(SysvisParser.CLUSTER, 0); }
	public NODE(): TerminalNode | undefined { return this.tryGetToken(SysvisParser.NODE, 0); }
	public EDGE(): TerminalNode | undefined { return this.tryGetToken(SysvisParser.EDGE, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SysvisParser.RULE_attr; }
	// @Override
	public enterRule(listener: SysvisListener): void {
		if (listener.enterAttr) {
			listener.enterAttr(this);
		}
	}
	// @Override
	public exitRule(listener: SysvisListener): void {
		if (listener.exitAttr) {
			listener.exitAttr(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SysvisVisitor<Result>): Result {
		if (visitor.visitAttr) {
			return visitor.visitAttr(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class AssignmentsContext extends ParserRuleContext {
	public assign(): AssignContext[];
	public assign(i: number): AssignContext;
	public assign(i?: number): AssignContext | AssignContext[] {
		if (i === undefined) {
			return this.getRuleContexts(AssignContext);
		} else {
			return this.getRuleContext(i, AssignContext);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SysvisParser.RULE_assignments; }
	// @Override
	public enterRule(listener: SysvisListener): void {
		if (listener.enterAssignments) {
			listener.enterAssignments(this);
		}
	}
	// @Override
	public exitRule(listener: SysvisListener): void {
		if (listener.exitAssignments) {
			listener.exitAssignments(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SysvisVisitor<Result>): Result {
		if (visitor.visitAssignments) {
			return visitor.visitAssignments(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class AssignContext extends ParserRuleContext {
	public ID(): TerminalNode[];
	public ID(i: number): TerminalNode;
	public ID(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(SysvisParser.ID);
		} else {
			return this.getToken(SysvisParser.ID, i);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SysvisParser.RULE_assign; }
	// @Override
	public enterRule(listener: SysvisListener): void {
		if (listener.enterAssign) {
			listener.enterAssign(this);
		}
	}
	// @Override
	public exitRule(listener: SysvisListener): void {
		if (listener.exitAssign) {
			listener.exitAssign(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SysvisVisitor<Result>): Result {
		if (visitor.visitAssign) {
			return visitor.visitAssign(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class EdgeContext extends ParserRuleContext {
	public ID(): TerminalNode[];
	public ID(i: number): TerminalNode;
	public ID(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(SysvisParser.ID);
		} else {
			return this.getToken(SysvisParser.ID, i);
		}
	}
	public assignments(): AssignmentsContext | undefined {
		return this.tryGetRuleContext(0, AssignmentsContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SysvisParser.RULE_edge; }
	// @Override
	public enterRule(listener: SysvisListener): void {
		if (listener.enterEdge) {
			listener.enterEdge(this);
		}
	}
	// @Override
	public exitRule(listener: SysvisListener): void {
		if (listener.exitEdge) {
			listener.exitEdge(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SysvisVisitor<Result>): Result {
		if (visitor.visitEdge) {
			return visitor.visitEdge(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class NodeContext extends ParserRuleContext {
	public ID(): TerminalNode { return this.getToken(SysvisParser.ID, 0); }
	public assignments(): AssignmentsContext | undefined {
		return this.tryGetRuleContext(0, AssignmentsContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SysvisParser.RULE_node; }
	// @Override
	public enterRule(listener: SysvisListener): void {
		if (listener.enterNode) {
			listener.enterNode(this);
		}
	}
	// @Override
	public exitRule(listener: SysvisListener): void {
		if (listener.exitNode) {
			listener.exitNode(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SysvisVisitor<Result>): Result {
		if (visitor.visitNode) {
			return visitor.visitNode(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ClusterContext extends ParserRuleContext {
	public CLUSTER(): TerminalNode { return this.getToken(SysvisParser.CLUSTER, 0); }
	public ID(): TerminalNode { return this.getToken(SysvisParser.ID, 0); }
	public statements(): StatementsContext {
		return this.getRuleContext(0, StatementsContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SysvisParser.RULE_cluster; }
	// @Override
	public enterRule(listener: SysvisListener): void {
		if (listener.enterCluster) {
			listener.enterCluster(this);
		}
	}
	// @Override
	public exitRule(listener: SysvisListener): void {
		if (listener.exitCluster) {
			listener.exitCluster(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SysvisVisitor<Result>): Result {
		if (visitor.visitCluster) {
			return visitor.visitCluster(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


